Fix spacing between title and text

--- a/components/ThreadTitle.module.css
+++ b/components/ThreadTitle.module.css
@@ -1,5 +1,6 @@
 .threadTitle {
   text-align: center;
+  margin-bottom: 3rem;
 }
 
 .title {
